--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,12 @@ server {
     listen 80;
     server_name localhost;
 
+    location /static/ {
+        access_log off;
+        alias /static/;
+        try_files $uri $uri/ /index.html =404;
+    }
+
     location / {
         proxy_pass http://flask:5000;
         proxy_set_header Host $host;
